traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:14: error: not found: value Direction
        if (getDirection==Direction.EAST){
                          ^TraversalZigZag:28: error: not found: value Direction
      if (getDirection==Direction.EAST){
                        ^