traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var counter : Int = 0
  var finalpos : Boolean = false
  var x : Int = 0
  var y : Int = 0
  right()
  while (finalpos== false){
    if (x == 6 & y == 6){
      setPos(x,y)
      writeMessage(counter)
      finalpos = true
    }
    else {
      	while (isFacingWall()==false){
      	if (getDirection==Direction.EAST){
      	  setPos(x,y)
      	  writeMessage(counter)
      	  counter = counter + 1
      	  x  = x + 1
     	 }
     	 else {
     	   setPos(x,y)
    	    writeMessage(counter)
    	    x = x - 1
    	    counter = counter + 1
   	   }
   	 }
  	  y = y + 1
      if (getDirection==Direction.EAST){
        right()
        forward()
        right()
      }
      else{
        left()
        forward()
        left()
      }
    }
  }
}
   